unpackaged/main/default/objects/FSL__User_Territory__c/FSL__User_Territory__c.object-meta.xml
<CustomObject>
    <description>Which Territories are visible to this user (Default = All)</description>
    <label>User Territory</label>
    <nameField>
        <displayFormat>ULID-{000000}</displayFormat>
        <label>User Territory Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Territories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>