unpackaged/main/default/objects/FSL__User_Territory__c/fields/FSL__ServiceTerritory__c.field-meta.xml
<CustomField>
    <fullName>FSL__ServiceTerritory__c</fullName>
    <label>Service Territory</label>
    <referenceTo>ServiceTerritory</referenceTo>
    <relationshipName>User_Territories</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>