unpackaged/main/default/objects/FSL__User_Territory__c/fields/FSL__Territory_Name__c.field-meta.xml
<CustomField>
    <fullName>FSL__Territory_Name__c</fullName>
    <formula>FSL__ServiceTerritory__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Territory Name</label>
    <type>Text</type>
</CustomField>