unpackaged/main/default/objects/FSL__User_Territory__c/fields/FSL__User__c.field-meta.xml
<CustomField>
    <fullName>FSL__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>User_Territories</relationshipName>
    <type>Lookup</type>
</CustomField>