unpackaged/main/default/objects/FSL__User_Territory__c/listViews/FSL__All_User_Territories.listView-meta.xml
<ListView>
    <fullName>FSL__All_User_Territories</fullName>
    <columns>NAME</columns>
    <columns>FSL__User__c</columns>
    <filterScope>Everything</filterScope>
    <label>All User Territories</label>
</ListView>